<resources>
    <string name="app_name">AluraViagens</string>
    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
    <string name="pais">Brasil</string>
    <string name="especiais">Especiais</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no c artão</string>
    <string name="banner_inicial">Banner inicial</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="imagem_do_local_do_pacote">Imagem do local do pacote</string>
    <string name="parabens">Parabéns!</string>
</resources>